--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@types/node": "^18.11.9",
     "@types/ws": "^8.5.3",
     "prettier": "^2.8.0",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
   "prettier": {
