--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "dependencies": {
     "@binance/connector": "^2.0.0-rc.4",
+    "axios": "^1.1.3",
     "kafkajs": "^2.2.3",
     "ws": "^8.11.0"
   },
