--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "@binance/connector": "^2.0.0-rc.4",
     "axios": "^1.1.3",
     "kafkajs": "^2.2.3",
+    "uuid": "^9.0.0",
     "ws": "^8.11.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "@types/uuid": "^9.0.0",
     "@types/ws": "^8.5.3",
     "prettier": "^2.8.0",
     "ts-node": "^10.9.1",
