--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,17 @@ services:
     working_dir: /
     command: npx ts-node-dev price.ts
 
+  balance:
+    image: node:16
+    container_name: kafka_example_balance
+    volumes:
+      - ./balance.ts:/balance.ts
+      - ./node_modules:/node_modules
+      - ./tsconfig.json:/tsconfig.json
+      - ./package.json:/package.json
+    working_dir: /
+    command: npx ts-node-dev balance.ts
+
   zookeeper:
     container_name: kafka_example_zookeeper
     image: confluentinc/cp-zookeeper:7.2.2
