--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: kafka_example_server
     volumes:
       - ./server.ts:/server.ts
+      - ./utils.ts:/utils.ts
+      - ./events.ts:/events.ts
       - ./node_modules:/node_modules
       - ./tsconfig.json:/tsconfig.json
       - ./package.json:/package.json
@@ -34,6 +36,7 @@ services:
       - ./package.json:/package.json
     working_dir: /
     command: npx ts-node-dev balance.ts
+    env_file: '.env'
 
   zookeeper:
     container_name: kafka_example_zookeeper
@@ -53,6 +56,7 @@ services:
       - zookeeper
     links:
       - zookeeper
+    # TODO configure retention time of events
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
