clean up balance and price services

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
   "cSpell.words": [
-    "BLOCKCYPHER",
-    "BTCUSDT",
-    "ETHUSDT",
+    "addrs",
+    "blockcypher",
+    "btcusdt",
+    "ethusdt",
     "kafkajs",
-    "Redpanda",
+    "redpanda",
     "uuidv"
   ]
 }
