--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "dependencies": {
     "@binance/connector": "^2.0.0-rc.4",
+    "@faker-js/faker": "^7.6.0",
     "axios": "^1.1.3",
     "kafkajs": "^2.2.3",
     "uuid": "^9.0.0",
