--- a/example.docker-compose.yaml
+++ b/example.docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   example:
-    container_name: kafka_example_app
+    container_name: redpanda_example_app
     image: node:16
     volumes:
       - ./example.ts:/example.ts
@@ -10,39 +10,17 @@ services:
       - ./package.json:/package.json
     working_dir: /
     command: npx ts-node-dev example.ts
-    depends_on:
-      kafka:
-        condition: service_healthy
-
-  zookeeper:
-    container_name: kafka_example_zookeeper
-    image: confluentinc/cp-zookeeper:7.3.0
     environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - 2181:2181
-    logging:
-      driver: none
-
-  kafka:
-    container_name: kafka_example_broker
-    image: confluentinc/cp-kafka:7.3.0
+      KAFKA_BROKER: redpanda:29092
     depends_on:
-      - zookeeper
+      - redpanda
+
+  redpanda:
+    image: docker.redpanda.com/vectorized/redpanda:v22.2.2
+    container_name: redpanda_example_broker
+    command:
+      - redpanda start
+      - --kafka-addr PLAINTEXT://0.0.0.0:29092
+      - --advertise-kafka-addr PLAINTEXT://redpanda:29092
     ports:
-      - 9092:9092
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://kafka:9092
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_LOG4J_LOGGERS: org.apache.zookeeper=ERROR,org.apache.kafka=ERROR,kafka=ERROR, kafka.cluster=ERROR,kafka.controller=ERROR,kafka.coordinator=ERROR,kafka.log=ERROR,kafka.server=ERROR,kafka.zookeeper=ERROR,state.change.logger=ERROR,kafka.cluster.Partition=ERROR,kafka.network=ERROR,kafka.common=ERROR,kafka.log.LogCleaner=ERROR
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    healthcheck:
-      test: nc -z localhost 9092 || exit -1
-      start_period: 10s
-      interval: 2s
-      timeout: 30s
-      retries: 30
+      - 29092:29092
